examples/test/testpolicy10777.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy10777
  namespace: namespace139
spec:
  podSelector:
    matchLabels:
      key24: value5
      key45: value12
      key46: value25
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key11: value38
          key43: value30
          key19: value48
      podSelector:
        matchLabels:
          key5: value40
          key30: value11
